# EduCards

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: .gitignore  requirements.txt
backend/core/: aws_config.py  settings.py  urls.py
backend/questions/: dynamo_utils.py  services.py  urls.py  views.py
educards/: .gitignore  package-lock.json  package.json
educards/public/: test.json
educards/src/: App.js  App.tsx
educards/src/components/: Flashcards.css  Flashcards.jsx  Flashcards.tsx
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: AddDocumentButton.js  ChatInterface.css  ChatInterface.js  EditFlashcardForm.js  Flashcard.css  Flashcard.js  FlashcardList.css  FlashcardList.js  History.css  History.js  LevaControls.js  Quiz.css  Quiz.js  UploadModal.js
frontend/src/services/: geminiWrapper.js
frontend/src/store/: useFlashcardStore.js
new_env/: pyvenv.cfg
new_env/Scripts/: activate  activate.bat  jp.py
server/: db.sqlite3
server/backend/: settings.py  urls.py
server/chat/: gemini_service.py  models.py  serializers.py  urls.py  views.py
server/flashcards_api/: admin.py  models.py  serializers.py  urls.py  views.py
server/flashcards_api/management/commands/: seed_data.py
server/flashcards_api/migrations/: 0001_initial.py
server/server/: settings.py  urls.py
