[project]
name = "flashcards-server"
version = "0.1.0"
description = "Flashcards API Server"
requires-python = ">=3.9"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.8"
djangorestframework = "3.14.0"
django-cors-headers = "4.3.1"
python-dotenv = "1.0.0"
google-generativeai = "0.3.0"
PyPDF2 = "3.0.1"
python-docx = "0.8.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 